--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
+
 }
